--- a/thesis/doc/AFIT LaTeX/usethesis.tex
+++ b/thesis/doc/AFIT LaTeX/usethesis.tex
@@ -225,7 +225,8 @@
 % your text.  Leave out [#1] if you don't want a definition.
 
 \begin{abstract}
-
+% Lower-end page count: 131
+% Upper-end page count: 170
 % DO: Write abstract.	
 
 \end{abstract}
@@ -245,28 +246,73 @@ In chapter three the traversal a error manifold in the problem configuration spa
 
 \chapter{Background} % This is Chapter 2.
 
-
-
-This chapter serves as an comprehensive review of the physical and computational concept material to the topic of this thesis. Relevant work in simulated annealing will be summarized. Next, artificial neural networks and their application will be discussed. The chapter concludes with a very brief overview of the quantum mechanical concepts employed throughout the document. Finally, the notation and terminology conventions to be used throughout the rest of the document are presented.
+This chapter serves as a comprehensive review of the physical and computational concepts material to the topic of this thesis. A broad overview of artificial neural networks and the application and history thereof is presented. Next, simulated annealing is described, along with a summary of some related works and a description of the physical inspiration for the algorithm. The chapter concludes with a very brief overview of the quantum mechanics, with emphasis placed on those concepts which will be employed throughout this thesis document. Finally, the notation and terminology conventions adopted in this document are established.
 
 \section{Artificial Neural Networks}
 
-Artificial Neural Networks (ANN) 
+% Is there a better term than sequential computing machinery? Each word in this name encodes a significant concept related to the origins and structure of the models: neural is a reference to neurons, which are the fundamental information processing elements of the biological systems which inspired the model; network refers to network theory, a subfield of graph theory, which governs representation of relationships between neurons; and artificial, meaning an object of human origin, in contrast with biological neural networks which arise naturally.
 
-\subsection{Back Propagation Training}
+It has long been recognized (source maybe?) that the capacity of biological information processing systems to flexibly and quickly process large quantities of data greatly exceeds that of sequential computing machinery. This information processing capability arises from the complex, nonlinear, parallel nature of biological information processors (Source? Hayken?). The family of models designed to replicate this powerful information processing architecture are collectively called artificial neural networks (ANN). In the most general sense, artificial neural networks are parallel distributed information processors (Hayken, or 1) comprising many simple processing elements. Networks store information about experienced stimuli and can make that information available. In such a network, interneuron connection strengths are used to encode information, and are modified via a learning strategy. Artificial neural networks are characterized by three features: a network topology or architecture, an activation function, and a learning strategy. Each will be discussed in the following sections. I will also review the history of artificial neural networks, and the biological inspiration for the computational model.
+
+\subsection{Biological Inspiration}
+
+Fig[an image of a neuron, mapped to a schematic of a neuron, mapped to a processing element]
+
+Integration of magnitude-encoded, rather than frequency-encoded, signals. 
+Threshold functions relationship to the biological shape, size... Papers needed.
+
+Biological neural networks are many orders of magnitude slower than those based in ... It in not the size of the network or the number of interconnections alone which confer upon the human brain its remarkable efficiency (Faggin, 1991). The  
+
+
+\subsection{Historical Overview}
+
+The study of artificial neural networks, as they are used and defined today, began with a 1943 paper (McCulloch and Pitts, 1943) by McCulloch and Pitts. In this paper, McCulloch and Pitts united, for the first time, the neurophisiology and mathematics... Significantly, Muc P showed in this paper that a network consisying of .. could approcimate any funcation.,0
+
+Hebbian stuff with (Rochester, Holland, Haibt, and Duda, 1956)
+
+
+\subsection{Network Topology}
+
+\subsection{Activation Functions}
+
+\subsection{Learning Strategies}
+
+General discussion.
+
+Reference (Mendel and McClaren, 1970) and (Haykin, pg 50)
+
+\subsubsection{Back Propagation Training}
+
+Discuss (Rumelhart, Hinton, Williams, 1986)
+
+Derive back prop. (Haykin, pg 161)
+
+Discuss the implication of local minima.
+
+Fig[Error surface with backprop]
+
+
+\subsubsection{Simulated Annealing}
+
+(Ackley, Hinton, and Sejnowski 1985) 
+
+...This Boltzmann machine is also of historical importance, as it was the first successfully-implemented multilayered neural network. (Ref: Haykin Book)
 
 
 \section{Related Works in Simulated Annealing}
 
-Simulated annealing (SA) is a stochastic optimization algorithm which can be used to find the global minimum of a cost function mapped from the configurations of a combinatorial optimization problem. The concept of simulated annealing was introduced in (Kirkpatrick) as an application of the methods of statistical mechanics to the problem of discrete combinatorial optimization. Specifically, simulated annealing is an extension of the Metropolis-Hastings (Metropolis) algorithm which is used to estimate the ground energy state of a many-body systems at thermal equilibrium. Kirkpatrick et al. applied the Metropolis-Hastings algorithm sequentially, with decreasing temperature values in order to approximate a solid slowly cooling to low temperatures. Later work by Geoff (Geoff) and Cortana et al. (Cortana) extended simulated annealing to the continuous domain. The basic simulated annealing algorithm, as it will be used in this paper, is presented in [algo1]. 
+Read (Haykin pg 556)
+
+Read (Haykin pg 560)
+
+Simulated annealing (SA) is a stochastic optimization algorithm which can be used to find the global minimum of a cost function mapped from the configurations of a combinatorial optimization problem. The concept of simulated annealing was introduced in by Kirkpatrick et al. in (Kirkpatrick) as an application of the methods of statistical mechanics to the problem of discrete combinatorial optimization. Specifically, simulated annealing is an extension of the Metropolis-Hastings (Metropolis) algorithm which can be used to estimate the ground energy state of a many-body systems at thermal equilibrium. Kirkpatrick et al. applied the Metropolis-Hastings algorithm sequentially, with decreasing temperature values in order to approximate a solid slowly cooling to low temperatures. Later work by Geoff (Geoff) and Cortana et al. (Cortana) extended simulated annealing to the continuous domain. The basic simulated annealing algorithm, as it will be used in this paper, is presented in [algo1]. 
 
 [algo1]
 
-The physical inspiration for simulated annealing. 
+The physical inspiration for simulated annealing. See (Haykin pg 546)
 
-Simulated annealing has been successfully applied to numerous domains.
 
-In the parlance of simulated annealing (Kirkpatrick) a system at its maximum temperature is said to be \textit{melted}. In the melted state, most perturbations of the configuration of the system are accepted by the algorithm. Analogously, a system that has a temperature of zero, which indicates that the algorithm cannot move to any higher-error state, is said to be \textit{frozen}. Note that a frozen system may still be perturbed into a lower-energy state.
+In the parlance of simulated annealing (Kirkpatrick) a system at its maximum temperature is said to be \textit{melted}. In the melted state, most perturbations of the system configuration are accepted by the algorithm. Analogously, a system that has a temperature of zero, which indicates that the algorithm cannot move to any higher-error state, is said to be \textit{frozen}. Note that a frozen system may still be perturbed into a lower-energy state.
 
 When considering only the influence of classical thermal fluctuations in particle energy levels, the probability of a particle traversing a barrier of height \begin{math} \Delta V \end{math} at a temperature \begin{math} T \end{math} is on the order of: \begin{equation} 
 \mathcal{P}_t = e^{-\frac{\Delta V}{T}} 
@@ -282,7 +328,7 @@ When considering only the influence of classical thermal fluctuations in particl
 \section{Related Works in Quantum Mechanics}
 
 
-Quantum mechanics is the branch of physics concerned with the physical laws of nature at very small scales. There are many aspects of physical reality than are observable only at these scales. Several techniques described in this document are either inspired by, or are simple models of quantum mechanical processes. These concepts are very briefly reviewed in this section. 
+Quantum mechanics is the branch of physics concerned with the physical laws of nature at very small scales. Many aspects of physical reality are observable only at these scales. Several techniques described in this document are either inspired by, or are simple models of quantum mechanical processes. These concepts are very briefly reviewed in this section. 
 
 \subsection{Quantum Tunneling} 
 
@@ -326,9 +372,10 @@ There is a great deal of academic writing describing quantum annealing in the la
 % Free Energy Surface - Error Manifold - Cost Function
 % System Configuration -  
 
+The term neuron will be used in this document to describe the information processing elements of a neural network. This convention is selected both for conciseness and for the useful adjectival form, neural, which will be of great explanatory utility in the coming chapters.
 
 
-
+Read (Haykin pg 561) Table 11.1
 
 
 \chapter{Methodology}
@@ -369,6 +416,8 @@ It is shown in Proof [n] that this algorithm is certain to eventually find the m
 
 
 \chapter{Results}
+
+Is my algorithm computationally efficient as in Haykin, pg 229?
 \chapter{Conclusion}
 
 
