Added some notes. Pre-clone commit.

--- a/thesis/doc/AFIT LaTeX/usethesis.tex
+++ b/thesis/doc/AFIT LaTeX/usethesis.tex
@@ -268,7 +268,8 @@ Biological neural networks are many orders of magnitude slower than those based 
 
 The study of artificial neural networks began with a 1943 paper \cite{mcculloch1988} by McCulloch and Pitts. In this paper, McCulloch and Pitts united, for the first time, neurophysiology, mathematics, and computation in a model of neural activity. This landmark paper marked the beginning of not only the computational theory of neural networks but also the computational theory of mind, and eventually led to the notion of finite atomata \cite{piccinini2006}. In this paper McCulloch and Pitts introduced a very simple model of a neuron, which acted as a threshold-based propositional logic unit. Significantly, McCulloch and Pitts showed that a network of these neuron models, interconnected, could represent a proposition of arbitrarily-high complexity. These models, often called McCulloch-Pitts Neurons, allowed only limited, discrete input values which are summed and compared to a threshold value, and did not posses any learning mechanism. They did, however, account for inhibitory action. 
 
-Though McCulloch and Pitts made mention of learning in their 1943 paper, thirteen years would pass before this concept was formalized into a mathematical and computational model. In 1956 Rochester, Holland, Haibt, and Duda \cite{rochester1956} presented the first attempt at using a physiologically-inspired learning rule to update the synaptic weights of a neural network. This model was based on the learning rule proposed in \textit{The Organization of Behavior} by Hebb \cite{hebb1967}.
+% DO: This paragraph needs rework around the work effeciency.
+Though McCulloch and Pitts made mention of learning in their 1943 paper, thirteen years would pass before this concept was formalized into a mathematical and computational model. In 1956 Rochester, Holland, Haibt, and Duda \cite{rochester1956} presented the first attempt at using a physiologically-inspired learning rule to update the synaptic weights of a neural network. This model was based on the learning rule postulated in 1949 by Hebb \cite{hebb1967}. In his book \textit{The Organization of Behavior}, Hebb suggested that synaptic plasticity, that is the capacity of synaptic strengths to change, is driven by metabolic changes in the neuron near the synapse such that if two cells often fired simultaneously the efficiency with which they cause one another to fire will increase. This efficiency is now called a synaptic weight. Rochester et. al. showed that the addition of variable synaptic weights alone was not sufficient to produce a network capable of learning. It was also necessary that these weights be capable of assuming inhibitory values.
 
 
 
@@ -280,7 +281,8 @@ This, in turn, implies that neural networks can serve as universal function appr
 
 \subsection{Network Topology}
 
-Feed for
+Feed forward
+recursive
 
 \subsection{Activation Functions}
 
